# supac

./: Cargo.toml  LICENSE-MIT  README.org
example_config/: arch.nu  cargo.nu  config.nu  flatpak.nu  package.nu  rustup.nu
src/: main.rs
src/backends/: mod.rs
src/backends/arch/: mod.rs
src/backends/cargo/: mod.rs
src/backends/flatpak/: mod.rs
src/backends/rustup/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/parser/: mod.rs
