[package]
name = "supac"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
derive_builder = "0.20.2"
env_logger = "0.11.6"
log = "0.4.25"
nu-cli = "0.106.0"
nu-cmd-lang = "0.106.0"
nu-command = "0.106.0"
nu-engine = "0.106.0"
nu-parser = "0.106.0"
nu-protocol = "0.106.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.9"
