[package]
name = "supac"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
derive_builder = "0.20.2"
env_logger = "0.11.6"
log = "0.4.25"
nu-cli = "0.106.0"
nu-cmd-lang = "0.106.0"
nu-command = "0.106.0"
nu-engine = "0.106.0"
nu-parser = "0.106.0"
nu-protocol = "0.106.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.9"

[lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
keyword_idents = "warn"
missing_const_for_fn = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
option_if_let_else = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "warn"
similar_names = "warn"
suspicious_operation_groupings = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_self = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_import = "warn"
