[package]
name = "supac"
version = "0.2.2"
edition = "2024"
authors = ["innocentzer0 <1nn0c3n7z3r0@proton.me>"]
description = "A declarative package manager for linux"
repository = "https://codeberg.org/innocentzer0/supac"
readme = false
license = "MIT OR Apache-2.0"
exclude = [
  "example_config/*",
]

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "https://codeberg.org/innocentzer0/supac/releases/download/{ version }/supac.tgz"
bin-path = "supac"
pkg-fmt = "tgz"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
derive_builder = "0.20.2"
env_logger = "0.11.6"
log = "0.4.25"
nu-cli = "0.108.0"
nu-cmd-lang = "0.108.0"
nu-command = "0.108.0"
nu-engine = "0.108.0"
nu-parser = "0.108.0"
nu-protocol = "0.108.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.9"

[lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_const_for_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "warn"
similar_names = "warn"
suspicious_operation_groupings = "warn"
unused_self = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"

[profile.release]
opt-level = "z"
lto = true
strip = true
